# Blue-Canary-Light-Weight-Crypto

./: .gitignore  CMakeLists.txt  README.md
include/: cipher_interface.h
lib/ciphers/: CMakeLists.txt  piccolo.h
lib/ciphers/AES/: CMakeLists.txt  cipher.c
lib/ciphers/PICCOLO/: CMakeLists.txt  makefile  piccolo.c
lib/ciphers/Piccolo/: CMakeLists.txt  piccolo.c  piccolo.h
lib/ciphers/naive_AES/: CMakeLists.txt  cipher.c
source/include/ciphers/: AES.h
source/lib/: CMakeLists.txt
source/lib/ciphers/: CMakeLists.txt
source/lib/ciphers/AES/: CMakeLists.txt  decrypt.c  encrypt.c
source/test/: AES.c  CMakeLists.txt
test/: AES.c  CMakeLists.txt  Piccolo.c
tools/: install.sh
tools/benchmark/: CMakeLists.txt  bechmark.sh  benchmark.c  benchmark.sh
