if(BUILD_TESTING)
  foreach(CIPHER IN LISTS CIPHER_LIST)
    if(NOT EXISTS "${CIPHER}.c")
    endif()
    set(TEST_CMD "${CIPHER}_unittest")
    add_executable("${TEST_CMD}" "${CMAKE_CURRENT_SOURCE_DIR}/${CIPHER}.c")
    target_link_libraries("${TEST_CMD}" "${CIPHER}")
    add_test(NAME "${CIPHER}" COMMAND "${TEST_CMD}")
  endforeach()
endif()
